--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   path_provider: ^2.1.1
   fl_chart: ^0.65.0
 
+  image_picker: ^1.0.5
+  flutter_local_notifications: ^16.2.0
+  permission_handler: ^11.1.0
+  timezone: ^0.9.2
+
 
 dev_dependencies:
   flutter_test:
