--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_local_notifications: ^16.2.0
   permission_handler: ^11.1.0
   timezone: ^0.9.2
+  url_launcher: ^6.2.2
 
 
 dev_dependencies:
